move/Pci_8164.BAS


Declare Function B_8164_start_tr_move Lib "8164.dll" Alias "_8164_start_tr_move" (ByVal AxisNo As Integer, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_ta_move Lib "8164.dll" Alias "_8164_start_ta_move" (ByVal AxisNo As Integer, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_sr_move Lib "8164.dll" Alias "_8164_start_sr_move" (ByVal AxisNo As Integer, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8164_start_sa_move Lib "8164.dll" Alias "_8164_start_sa_move" (ByVal AxisNo As Integer, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer

Declare Function B_8164_start_tr_move_xy Lib "8164.dll" Alias "_8164_start_tr_move_xy" (ByVal CardNo As Integer, ByVal Dist As Double, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_ta_move_xy Lib "8164.dll" Alias "_8164_start_ta_move_xy" (ByVal CardNo As Integer, ByVal Pos As Double, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_sr_move_xy Lib "8164.dll" Alias "_8164_start_sr_move_xy" (ByVal CardNo As Integer, ByVal Dist As Double, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8164_start_sa_move_xy Lib "8164.dll" Alias "_8164_start_sa_move_xy" (ByVal CardNo As Integer, ByVal Pos As Double, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer

Declare Function B_8164_start_tr_move_zu Lib "8164.dll" Alias "_8164_start_tr_move_zu" (ByVal CardNo As Integer, ByVal Dist As Double, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_ta_move_zu Lib "8164.dll" Alias "_8164_start_ta_move_zu" (ByVal CardNo As Integer, ByVal Pos As Double, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_sr_move_zu Lib "8164.dll" Alias "_8164_start_sr_move_zu" (ByVal CardNo As Integer, ByVal Dist As Double, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8164_start_sa_move_zu Lib "8164.dll" Alias "_8164_start_sa_move_zu" (ByVal CardNo As Integer, ByVal Pos As Double, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer

Declare Function B_8164_start_a_arc_xy Lib "8164.dll" Alias "_8164_start_a_arc_xy" (ByVal CardNo As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8164_start_r_arc_xy Lib "8164.dll" Alias "_8164_start_r_arc_xy" (ByVal CardNo As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8164_start_a_arc_zu Lib "8164.dll" Alias "_8164_start_a_arc_zu" (ByVal CardNo As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8164_start_r_arc_zu Lib "8164.dll" Alias "_8164_start_r_arc_zu" (ByVal CardNo As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer

Declare Function B_8164_start_tr_line2 Lib "8164.dll" Alias "_8164_start_tr_line2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_ta_line2 Lib "8164.dll" Alias "_8164_start_ta_line2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_sr_line2 Lib "8164.dll" Alias "_8164_start_sr_line2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8164_start_sa_line2 Lib "8164.dll" Alias "_8164_start_sa_line2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer

Declare Function B_8164_start_a_arc2 Lib "8164.dll" Alias "_8164_start_a_arc2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8164_start_r_arc2 Lib "8164.dll" Alias "_8164_start_r_arc2" (ByVal CardNo As Integer, AxisArray As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer

Declare Function B_8164_start_tr_line3 Lib "8164.dll" Alias "_8164_start_tr_line3" (ByVal CardNo As Integer, AxisArray As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal DistZ As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_ta_line3 Lib "8164.dll" Alias "_8164_start_ta_line3" (ByVal CardNo As Integer, AxisArray As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal PosZ As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_sr_line3 Lib "8164.dll" Alias "_8164_start_sr_line3" (ByVal CardNo As Integer, AxisArray As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal DistZ As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8164_start_sa_line3 Lib "8164.dll" Alias "_8164_start_sa_line3" (ByVal CardNo As Integer, AxisArray As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal PosZ As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer

Declare Function B_8164_start_tr_line4 Lib "8164.dll" Alias "_8164_start_tr_line4" (ByVal CardNo As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal DistZ As Double, ByVal DistU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_ta_line4 Lib "8164.dll" Alias "_8164_start_ta_line4" (ByVal CardNo As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal PosZ As Double, ByVal PosU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8164_start_sr_line4 Lib "8164.dll" Alias "_8164_start_sr_line4" (ByVal CardNo As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal DistZ As Double, ByVal DistU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8164_start_sa_line4 Lib "8164.dll" Alias "_8164_start_sa_line4" (ByVal CardNo As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal PosZ As Double, ByVal PosU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer

Declare Function B_8164_set_tr_move_all Lib "8164.dll" Alias "_8164_set_tr_move_all" (ByVal TotalAxes As Integer, AxisArray As Integer, DistA As Double, StrVelA As Double, MaxVelA As Double, TaccA As Double, TdecA As Double) As Integer
Declare Function B_8164_start_move_all Lib "8164.dll" Alias "_8164_start_move_all" (ByVal FirstAxisNo As Integer) As Integer
Declare Function B_8164_stop_move_all Lib "8164.dll" Alias "_8164_stop_move_all" (ByVal FirstAxisNo As Integer) As Integer

Declare Function B_8164_config_from_file Lib "8164.dll" Alias "_8164_config_from_file" (ByVal file_name As String) As Integer

Declare Function B_8164_set_fa_speed Lib "8164.dll" Alias "_8164_set_fa_speed" (ByVal AxisNo As Integer, ByVal FA_Speed As Double) As Integer
Declare Function B_8164_check_compare_status Lib "8164.dll" Alias "_8164_check_compare_status" (ByVal AxisNo As Integer, cmp_sts As Integer) As Integer
Declare Function B_8164_check_continuous_buffer Lib "8164.dll" Alias "_8164_check_continuous_buffer" (ByVal AxisNo As Integer) As Integer

Declare Function B_8164_set_auto_compare Lib "8164.dll" Alias "_8164_set_auto_compare" (ByVal AxisNo As Integer, ByVal SelectSrc As Integer) As Integer
Declare Function B_8164_build_compare_function Lib "8164.dll" Alias "_8164_build_compare_function" (ByVal AxisNo As Integer, ByVal StartP As Double, ByVal EndP As Double, ByVal Interval As Double, ByVal Device As Integer) As Integer
Declare Function B_8164_build_compare_table Lib "8164.dll" Alias "_8164_build_compare_table" (ByVal AxisNo As Integer, TableArray As Double, ByVal SizeA As Integer, ByVal Device As Integer) As Integer
